@@ -12,7 +12,9 @@ import com.mopl.domain.model.content.ContentModel;
 import com.mopl.domain.model.playlist.PlaylistModel;
 import com.mopl.domain.model.user.UserModel;
 import com.mopl.domain.repository.playlist.PlaylistQueryRequest;
+import com.mopl.api.application.outbox.DomainEventOutboxMapper;
 import com.mopl.domain.service.content.ContentService;
+import com.mopl.domain.service.outbox.OutboxService;
 import com.mopl.domain.service.playlist.PlaylistService;
 import com.mopl.domain.service.playlist.PlaylistSubscriptionService;
 import com.mopl.domain.service.user.UserService;
@@ -66,6 +68,12 @@ class PlaylistFacadeTest {
 
     @Mock
     private TransactionTemplate transactionTemplate;
+
+    @Mock
+    private OutboxService outboxService;
+
+    @Mock
+    private DomainEventOutboxMapper domainEventOutboxMapper;
 
     @InjectMocks
     private PlaylistFacade playlistFacade;
@@ -121,7 +129,7 @@ class PlaylistFacadeTest {
 
             // then
             assertThat(result.data()).hasSize(1);
-            assertThat(result.data().get(0))
+            assertThat(result.data().getFirst())
                 .usingRecursiveComparison()
                 .isEqualTo(expectedResponse);
 
@@ -205,7 +213,7 @@ class PlaylistFacadeTest {
 
             // then
             assertThat(result.data()).hasSize(1);
-            assertThat(result.data().get(0))
+            assertThat(result.data().getFirst())
                 .usingRecursiveComparison()
                 .isEqualTo(expectedResponse);
 
@@ -293,6 +301,9 @@ class PlaylistFacadeTest {
             given(playlistService.create(eq(owner), eq(title), eq(description)))
                 .willReturn(playlistModel);
             given(playlistResponseMapper.toResponse(playlistModel)).willReturn(expectedResponse);
+            willAnswer(invocation -> invocation.<org.springframework.transaction.support.TransactionCallback<?>>getArgument(0)
+                .doInTransaction(null))
+                .given(transactionTemplate).execute(any());
 
             // when
             PlaylistResponse result = playlistFacade.createPlaylist(owner.getId(), request);
@@ -336,6 +347,9 @@ class PlaylistFacadeTest {
             given(playlistService.update(playlistId, owner.getId(), newTitle, newDescription))
                 .willReturn(updatedPlaylist);
             given(playlistResponseMapper.toResponse(updatedPlaylist)).willReturn(expectedResponse);
+            willAnswer(invocation -> invocation.<org.springframework.transaction.support.TransactionCallback<?>>getArgument(0)
+                .doInTransaction(null))
+                .given(transactionTemplate).execute(any());
 
             // when
             PlaylistResponse result = playlistFacade.updatePlaylist(
@@ -386,12 +400,20 @@ class PlaylistFacadeTest {
         void withValidRequest_addsContentSuccess() {
             // given
             UserModel owner = UserModelFixture.create();
-            UUID playlistId = UUID.randomUUID();
-            UUID contentId = UUID.randomUUID();
+            PlaylistModel playlistModel = PlaylistModelFixture.builder(owner).sample();
+            UUID playlistId = playlistModel.getId();
+            ContentModel contentModel = ContentModelFixture.create();
+            UUID contentId = contentModel.getId();
 
             given(userService.getById(owner.getId())).willReturn(owner);
             given(contentService.exists(contentId)).willReturn(true);
+            given(playlistService.getById(playlistId)).willReturn(playlistModel);
+            given(contentService.getById(contentId)).willReturn(contentModel);
             willDoNothing().given(playlistService).addContent(playlistId, owner.getId(), contentId);
+            willAnswer(invocation -> {
+                invocation.<Consumer<Object>>getArgument(0).accept(null);
+                return null;
+            }).given(transactionTemplate).executeWithoutResult(any());
 
             // when & then
             assertThatNoException()
